feat (archive): added get by contest id

--- a/javinukai-front/public/locales/en/translation.json
+++ b/javinukai-front/public/locales/en/translation.json
@@ -472,5 +472,12 @@
     "notFoundInfoMessage": "Page that you are seeking was not found",
     "error": "error",
     "backToHomepage": "Return to homepage"
+  },
+
+  "ArchivePage": {
+    "contestName":"Contest name",
+    "contestDescription":"Contest description",
+    "startDate":"Start date",
+    "endDate":"End date"
   }
 }
